--- a/TicTacToeApi/appsettings.json
+++ b/TicTacToeApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwt": {
+    "secret": "F-JaNdRfUserjd89#5*6Xn2r5usErw8x/A?D(G+KbPeShV",
+    "issuer": "TicTacToeServer",
+    "audience": "TicTacToeClient",
+    "accessTokenExpiration": 10000
+  }
 }
