Add User Registration and login

--- a/TicTacToeApi.Bll/TicTacToeApi.Bll.csproj
+++ b/TicTacToeApi.Bll/TicTacToeApi.Bll.csproj
@@ -6,4 +6,23 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToeApi.Dal\TicTacToeApi.Dal.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Users\uropb\source\repos\tic-tac-toe\TicTacToeApi.Bll\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\uropb\source\repos\tic-tac-toe\TicTacToeApi.Bll\.editorconfig" />
+  </ItemGroup>
+
 </Project>
