Creating initial migration

--- a/TicTacToeApi/appsettings.json
+++ b/TicTacToeApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=tictactoeapi;User Id=postgres;Password=Marvel2012;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
